@@ -38,6 +38,14 @@
 <p>2018-02-26  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/pict.c (ReadPICTImage): Validate that PICT rectangles do
+not have zero dimensions.  Specify expected file type when reading
+from a temporary file.  Trace PICT rectangle dimensions.  More
+detection of blob EOF and more error handling.  Fixes oss-fuzz
+issue 6193 &quot;graphicsmagick/coder_PCT_fuzzer: Unknown signal in
+AllocateImageColormap&quot; and likely many oss-fuzz ASAN/UBSAN issues
+reported against &quot;PCT&quot; and &quot;PICT&quot; since this one problem appears
+to be causing a spew of reports.</li>
 <li>coders/png.c (ReadMNGImage): Detect and handle failure to
 allocate global PLTE.  Problem was reported via email from Petr
 Gajdos on February 26, 2018.</li>
